updated npm pkg vulnerabilities

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,19 +1,18 @@
 {
-    "editor.inlineSuggest.enabled": true,
-    "git.autofetch": true,
-    "git.enableSmartCommit": true,
-    "window.zoomLevel": 3,
-    "vs-code-prettier-eslint.prettierLast": true,
-    "reactSnippets.settings.prettierEnabled": true,
-    "editor.formatOnType": true,
-    "eslint.run": "onSave",
-    "notebook.formatOnSave.enabled": true,
-    "prettier.enableDebugLogs": true,
-    "editor.formatOnPaste": true,
-    "editor.codeActionsOnSave": {
-    
-      "source.fixAll.eslint": true
-    },
-    "javascript.updateImportsOnFileMove.enabled": "always",
-    "editor.formatOnSave": true
-  }
+  "editor.inlineSuggest.enabled": true,
+  "git.autofetch": true,
+  "git.enableSmartCommit": true,
+  "window.zoomLevel": 3,
+  "vs-code-prettier-eslint.prettierLast": true,
+  "reactSnippets.settings.prettierEnabled": true,
+  "editor.formatOnType": true,
+  "eslint.run": "onSave",
+  "notebook.formatOnSave.enabled": true,
+  "prettier.enableDebugLogs": true,
+  "editor.formatOnPaste": true,
+  "editor.codeActionsOnSave": {
+    "source.fixAll.eslint": "explicit"
+  },
+  "javascript.updateImportsOnFileMove.enabled": "always",
+  "editor.formatOnSave": true
+}
