--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "@mui/material": "^5.14.18",
     "@portal-hq/web": "^0.0.5",
     "ethers": "^6.8.1",
-    "next": "14.0.2",
+    "next": "^14.2.3",
     "react": "^18",
     "react-dom": "^18"
   },
